--- a/LLVMJIT/CMakeLists.txt
+++ b/LLVMJIT/CMakeLists.txt
@@ -1,14 +1,16 @@
 cmake_minimum_required(VERSION 3.8.0)
 project(LLVMJIT)
 
-# WAVM configuration options
+# Set dynamic linking to on
 option(WAVM_ENABLE_STATIC_LINKING "use static linking instead of dynamic for the WAVM libraries" OFF)
 
-# Bind some variables to useful paths.
+# Bind some useful paths to variables
 set(LLVMJIT_ROOT_DIR ${CMAKE_CURRENT_LIST_DIR})
 set(LLVMJIT_SOURCE_DIR ${LLVMJIT_ROOT_DIR}/src)
 set(LLVMJIT_INCLUDE_DIR ${LLVMJIT_ROOT_DIR}/include)
+set(WAVM_INCLUDE_DIR ${LLVMJIT_ROOT_DIR}/../../WAVM/Include)
 
+# Create the LLVMJIT library
 add_library(LLVMJIT SHARED
         ${LLVMJIT_SOURCE_DIR}/EmitConvert.cpp
 		${LLVMJIT_SOURCE_DIR}/EmitCore.cpp
@@ -25,10 +27,11 @@ add_library(LLVMJIT SHARED
 		${LLVMJIT_SOURCE_DIR}/Thunk.cpp
 		${LLVMJIT_SOURCE_DIR}/Win64EH.cpp
 		)
+# Set private include directory
 target_include_directories(LLVMJIT PRIVATE ${LLVMJIT_SOURCE_DIR})
 set_target_properties(LLVMJIT PROPERTIES PUBLIC_HEADER ${LLVMJIT_INCLUDE_DIR}/LLVMJIT.h)
 
-# Target C++11.
+# Target C++11
 target_compile_features(LLVMJIT PUBLIC cxx_std_14)
 
 # Find an installed build of LLVM
@@ -38,12 +41,22 @@ if(LLVM_VERSION_MAJOR LESS 6)
 	message(FATAL_ERROR "WAVM requires LLVM version 6.0 or newer")
 endif()
 
-# Convert LLVM_DEFINITIONS and LLVM_INCLUDE_DIRS from strings of space-separated elements to
-# CMake lists (strings with semicolon-separated elements).
+# Convert LLVM_DEFINITIONS and LLVM_INCLUDE_DIRS from strings of space-separated
+# elements to strings of semicolon-separated elements (CMake lists)
 separate_arguments(LLVM_DEFINITIONS)
 separate_arguments(LLVM_INCLUDE_DIRS)
 
-# Find the LLVM libraries to link with.
+# LLVM on Windows includes a bunch of definitions in LLVM_DEFINITIONS to disable secure CRT
+# warnings, which prevents the warnings from triggering in WAVM code as well. Remove them, since
+# they doesn't seem to be necessary just to include LLVM.
+list(REMOVE_ITEM LLVM_DEFINITIONS "-D_CRT_SECURE_NO_WARNINGS")
+list(REMOVE_ITEM LLVM_DEFINITIONS "-D_CRT_SECURE_NO_DEPRECATE")
+list(REMOVE_ITEM LLVM_DEFINITIONS "-D_CRT_NONSTDC_NO_DEPRECATE")
+list(REMOVE_ITEM LLVM_DEFINITIONS "-D_CRT_NONSTDC_NO_WARNINGS")
+list(REMOVE_ITEM LLVM_DEFINITIONS "-D_SCL_SECURE_NO_DEPRECATE")
+list(REMOVE_ITEM LLVM_DEFINITIONS "-D_SCL_SECURE_NO_WARNINGS")
+
+# Find the LLVM libraries to link with
 llvm_map_components_to_libnames(LLVM_LIBS
 		support
 		core
@@ -55,18 +68,17 @@ llvm_map_components_to_libnames(LLVM_LIBS
 		${LLVM_TARGETS_TO_BUILD})
 
 target_compile_definitions(LLVMJIT PUBLIC ${LLVM_DEFINITIONS})
-target_include_directories(LLVMJIT PUBLIC ${LLVM_INCLUDE_DIRS})
+target_include_directories(LLVMJIT PUBLIC ${LLVM_INCLUDE_DIRS} ${WAVM_INCLUDE_DIR} ${LLVMJIT_INCLUDE_DIR})
 target_link_libraries(LLVMJIT ${LLVM_LIBS})
 
 include(GNUInstallDirs)
 
-# Install libLLVMJIT.so to <install root>/lib and LLVMJIT.h to <install root>/include
+# Install libLLVMJIT.so to /usr/local/lib and LLVMJIT.h to /usr/local/include
 install(TARGETS LLVMJIT
-		EXPORT LLVMJITInstallTargets COMPONENT devel
 		LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
 		PUBLIC_HEADER DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})
 
-# Set up the WAVM_API definitions.
+# Set up the WAVM_API definitions
 if(NOT WAVM_ENABLE_STATIC_LINKING AND MSVC)
 	target_compile_definitions(LLVMJIT PRIVATE "\"WAVM_API=__declspec(dllexport)\"")
 	target_compile_definitions(LLVMJIT INTERFACE "\"WAVM_API=__declspec(dllimport)\"")
